vcluster_versioned_docs/version-0.37.0/manage/backup-restore/backup.mdx
---
title: Create snapshots
sidebar_label: Create Snapshots
sidebar_position: 1
sidebar_class_name: host-nodes private-nodes
---

import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';
import TenancySupport from '../../_fragments/tenancy-support.mdx';
import InterpolatedCodeBlock from '@site/src/components/InterpolatedCodeBlock';

<TenancySupport hostNodes="true" privateNodes="true" />

There are multiple ways to back up and restore a tenant cluster. <GlossaryTerm term="vcluster">vCluster</GlossaryTerm> provides a built-in method to create and restore snapshots using its CLI.

:::tip Scheduled snapshots with vCluster Platform
Need automated, scheduled snapshots? [vCluster Platform AutoSnapshots](../../configure/vcluster-yaml/snapshots.mdx) lets you configure automatic snapshot creation on a cron schedule with retention policies. No need to write custom Kubernetes jobs.
:::

:::warning
`vcluster snapshot create` exports the tenant cluster's Kubernetes key/value data through kine, including when kine uses an external MySQL or PostgreSQL database. This isn't a native database backup, and vCluster can't back up or roll back that external database if a later restore fails. Take a native database backup before you rely on `vcluster restore` with an external database. Refer to the relevant database documentation.
:::

## Create a snapshot

We recommend using the vCluster CLI `vcluster snapshot create` command to back up the <GlossaryTerm term="etcd">etcd</GlossaryTerm> datastore.

:::info
The vCluster snapshot feature does not back up persistent volumes. To back up persistent volumes, use the [Velero backup method](./velero.mdx).
:::

When you run `vcluster snapshot create`, the CLI submits a snapshot request. The vCluster snapshot controller processes it in the background. Here is an example:

```bash
vcluster snapshot create myvcluster "container:///data/my-snapshot.tar.gz"
13:52:09 info Beginning snapshot creation... You can check the snapshot creation progress with the following command: vcluster snapshot get myvcluster "container:///data/my-snapshot.tar.gz"'
```

You can check the snapshot creation progress with the following command:

```bash
vcluster snapshot get myvcluster "container:///data/my-snapshot.tar.gz"

                  SNAPSHOT               |  STATUS   | AGE
  ---------------------------------------+-----------+------
    container:///data/my-snapshot.tar.gz | Completed | 28s

```

The vCluster snapshot controller automatically determines the configured backing store and saves the snapshot at the specified location. The snapshot includes:

- Backing store data (such as etcd or SQLite)
- vCluster Helm release information
- vCluster configuration (for example, `vcluster.yaml`)

### Standalone

Standalone vCluster runs as a systemd service directly on a Linux host, without a Kubernetes cluster. Use the `--standalone` flag instead of a cluster name to target the local standalone installation. This flag can't be used with `--driver docker`.

<InterpolatedCodeBlock
  code={`vcluster snapshot create --standalone "s3://[[VAR:BUCKET:my-s3-bucket]]/[[VAR:SNAPSHOT_KEY:my-bucket-key]]"`}
  language="bash"
  title="Create a snapshot on a standalone vCluster"
/>

Check the snapshot status with:

<InterpolatedCodeBlock
  code={`vcluster snapshot get --standalone "s3://[[VAR:BUCKET:my-s3-bucket]]/[[VAR:SNAPSHOT_KEY:my-bucket-key]]"`}
  language="bash"
  title="Check snapshot status on a standalone vCluster"
/>

:::tip External storage for cross-node recovery
The `container://` protocol stores the snapshot on the local filesystem of the standalone node. For disaster recovery scenarios where you need to restore to a different node, use an external storage backend such as [OCI](#store-snapshots-in-oci-image-registries), [S3](#store-snapshots-in-s3-buckets), or [Azure Blob Storage](#store-snapshots-in-azure-blob-storage).
:::

### Snapshot URL

vCluster uses a snapshot URL to save the snapshot to a specific location. The snapshot URL contains the following information:

| Parameter          | Description | Example |
|--------------------|-------------|---------|
| Protocol           | Defines the storage type for the snapshot | `oci`, `s3`, `container`, `https` (Azure Blob Storage) |
| Storage location   | Specifies where to save the snapshot | `oci://ghcr.io/my-user/my-repo:my-tag`, `s3://my-s3-bucket/my-snapshot-key`, `https://myaccount.blob.core.windows.net/my-container/my-snapshot.tar.gz`, `container:///data/my-snapshot.tar.gz` |
| Optional flags     | Additional options for snapshot storage | `skip-client-credentials=true` |

### Supported protocols

The following protocols are supported for storing snapshots:

- [`oci`](#store-snapshots-in-oci-image-registries) – Stores snapshots in an OCI image registry, such as Docker Hub or GHCR.
- [`s3`](#store-snapshots-in-s3-buckets) – Saves snapshots to an S3-compatible bucket, such as AWS S3 or MinIO.
- [Azure Blob Storage](#store-snapshots-in-azure-blob-storage) – Saves snapshots to Azure Blob Storage.
- [`container`](#store-snapshots-in-containers) – Stores snapshots as a local file inside a vCluster container or another persistent volume claim (PVC).

For example, the following snapshot URL saves the snapshot to an OCI image registry:

<InterpolatedCodeBlock
  code={`vcluster snapshot create [[VAR:VCLUSTER_NAME:my-vcluster]] "oci://[[VAR:OCI_REGISTRY:ghcr.io]]/[[VAR:OCI_REPO:my-user/my-repo]]:[[VAR:OCI_TAG:my-tag]]"`}
  language="bash"
  title="Snapshot and push to an OCI image registry"
/>

#### Store snapshots in OCI image registries

You can save snapshots to OCI image registries. Authenticate using locally stored OCI credentials, or pass credentials directly in the snapshot URL.

To authenticate with local credentials, log in to your OCI registry and create the snapshot:

<InterpolatedCodeBlock
  code={`# Log in to the OCI registry using a password access token.
echo $PASSWORD_ACCESS_TOKEN | docker login [[VAR:OCI_REGISTRY:ghcr.io]] -u $USERNAME --password-stdin

# Create a snapshot and push it to an OCI image registry.
vcluster snapshot create [[VAR:VCLUSTER_NAME:my-vcluster]] "oci://[[VAR:OCI_REGISTRY:ghcr.io]]/[[VAR:OCI_REPO:my-user/my-repo]]:[[VAR:OCI_TAG:my-tag]]"`}
  language="bash"
  title="Authenticate with local OCI credentials and create a snapshot"
/>

Alternatively, pass credentials directly in the snapshot URL. The following parameters configure authentication:

| Parameter | Description | Required |
|-----------|-------------|----------|
| `username` | Username for authenticating with the OCI registry | Yes, when not using local credentials |
| `password` | Base64-encoded password for authenticating with the OCI registry | Yes, when not using local credentials |
| `skip-client-credentials` | When set to `true`, ignores local Docker credentials | No, defaults to `false` |


<InterpolatedCodeBlock
  code={`# Pass authentication credentials directly in the URL and create a snapshot.
export OCI_USERNAME=[[VAR:OCI_USERNAME:my-username]]
export OCI_PASSWORD=$(echo -n "[[VAR:OCI_PASSWORD:my-password]]" | base64)
vcluster snapshot create [[VAR:VCLUSTER_NAME:my-vcluster]] "oci://[[VAR:OCI_REGISTRY:ghcr.io]]/[[VAR:OCI_REPO:my-user/my-repo]]:[[VAR:OCI_TAG:my-tag]]?username=$OCI_USERNAME&password=$OCI_PASSWORD&skip-client-credentials=true"`}
  language="bash"
  title="Pass OCI credentials directly in the snapshot URL"
/>

#### Store snapshots in S3 buckets

Store snapshots in an S3-compatible bucket using the `s3` protocol. This works with AWS S3 and S3-compatible providers such as MinIO or Ceph. These are common in on-premise and air-gapped environments where cloud storage isn't available.

You can authenticate in two ways: by using local environment credentials or by passing credentials directly in the URL.

To use local environment credentials, log in to AWS CLI, then create and save the snapshot:

<InterpolatedCodeBlock
  code={`# Check if you are logged in.
aws sts get-caller-identity

# Create a snapshot and store it in an S3 bucket.
vcluster snapshot create [[VAR:VCLUSTER_NAME:my-vcluster]] "s3://[[VAR:BUCKET:my-s3-bucket]]/[[VAR:SNAPSHOT_KEY:my-bucket-key]]"`}
  language="bash"
  title="Create and store a snapshot in an S3 bucket using AWS CLI credentials"
/>

Alternatively, you can pass options directly in the snapshot URL. The following options are supported:

| Flag                        | Description | Required |
|-----------------------------|-------------|---|
| `access-key-id`             | Base64-encoded S3 access key ID for authentication | Yes, when not using local credentials |
| `secret-access-key`         | Base64-encoded S3 secret access key for authentication | Yes, when not using local credentials |
| `session-token`             | Base64-encoded temporary session token for authentication | Yes, when not using local credentials |
| `region`                    | Region of the S3-compatible bucket | No |
| `url`                       | Base64-encoded custom endpoint URL for S3-compatible providers (such as MinIO or Ceph) | No |
| `force-path-style`          | Use path-style addressing (`endpoint/bucket`) instead of virtual-hosted-style. Required for most S3-compatible providers. | No, defaults to `false` |
| `profile`                   | AWS profile to use for authentication | No |
| `skip-client-credentials`   | Skips use of local credentials for authentication | No, defaults to `false` |
| `server-side-encryption`    | Server-side encryption method (`AES256` for SSE-S3, `aws:kms` for SSE-KMS) | No |
| `kms-key-id`               | KMS key ID for SSE-KMS encryption | No |


:::warning Security
Credentials passed in the snapshot URL are Base64-encoded, not encrypted. Avoid storing snapshot commands with inline credentials in shell history, scripts, or CI logs. For production environments, prefer local credential-based authentication with `aws configure` or a Kubernetes Secret, and set `skip-client-credentials=false`.
:::

Run the following command to create a snapshot and store it in an S3 bucket:

<Tabs
  defaultValue="macos"
  values={[
    {label: 'macOS', value: 'macos'},
    {label: 'Linux', value: 'linux'},
  ]}>

<TabItem value="macos">

<InterpolatedCodeBlock
  code={`# Read the AWS credentials from files and encode them with base64
# This allows them to be safely included in the S3 URL
export ACCESS_KEY_ID=$(cat my-access-key-id.txt | base64)
export SECRET_ACCESS_KEY=$(cat my-secret-access-key.txt | base64)
export SESSION_TOKEN=$(cat my-session-token.txt | base64)

vcluster snapshot create [[VAR:VCLUSTER_NAME:my-vcluster]] "s3://[[VAR:BUCKET:my-s3-bucket]]/[[VAR:SNAPSHOT_KEY:my-bucket-key]]?access-key-id=$ACCESS_KEY_ID&secret-access-key=$SECRET_ACCESS_KEY&session-token=$SESSION_TOKEN"`}
  language="bash"
  title="Pass S3 credentials directly in the URL to create a snapshot"
/>

</TabItem>

<TabItem value="linux">

<InterpolatedCodeBlock
  code={`# Read the AWS credentials from files and encode them with base64
# On Linux, the -w 0 flag prevents line wrapping of the encoded output
export ACCESS_KEY_ID=$(cat my-access-key-id.txt | base64 -w 0)
export SECRET_ACCESS_KEY=$(cat my-secret-access-key.txt | base64 -w 0)
export SESSION_TOKEN=$(cat my-session-token.txt | base64 -w 0)

vcluster snapshot create [[VAR:VCLUSTER_NAME:my-vcluster]] "s3://[[VAR:BUCKET:my-s3-bucket]]/[[VAR:SNAPSHOT_KEY:my-bucket-key]]?access-key-id=$ACCESS_KEY_ID&secret-access-key=$SECRET_ACCESS_KEY&session-token=$SESSION_TOKEN"`}
  language="bash"
  title="Pass S3 credentials directly in the URL to create a snapshot"
/>

</TabItem>
</Tabs>

##### S3-compatible providers {#s3-compatible}

S3-compatible providers such as MinIO or Ceph require two additional parameters: `url` to specify the custom endpoint and `force-path-style` to use path-style bucket addressing. These providers don't use session tokens, so you can omit that parameter.

<Tabs
  defaultValue="macos"
  values={[
    {label: 'macOS', value: 'macos'},
    {label: 'Linux', value: 'linux'},
  ]}>

<TabItem value="macos">

<InterpolatedCodeBlock
  code={`# Base64-encode the credentials and the custom endpoint URL
export ACCESS_KEY_ID=$(cat my-access-key-id.txt | base64)
export SECRET_ACCESS_KEY=$(cat my-secret-access-key.txt | base64)
export ENDPOINT=$(echo -n "[[VAR:ENDPOINT:https://s3.example.com:9000]]" | base64)

vcluster snapshot create [[VAR:VCLUSTER_NAME:my-vcluster]] "s3://[[VAR:BUCKET:my-bucket]]/[[VAR:SNAPSHOT_KEY:my-snapshot-key]]?access-key-id=$ACCESS_KEY_ID&secret-access-key=$SECRET_ACCESS_KEY&url=$ENDPOINT&region=[[VAR:REGION:us-east-1]]&force-path-style=true"`}
  language="bash"
  title="Store a snapshot with an S3-compatible provider"
/>

</TabItem>

<TabItem value="linux">

<InterpolatedCodeBlock
  code={`# Base64-encode the credentials and the custom endpoint URL
# On Linux, the -w 0 flag prevents line wrapping of the encoded output
export ACCESS_KEY_ID=$(cat my-access-key-id.txt | base64 -w 0)
export SECRET_ACCESS_KEY=$(cat my-secret-access-key.txt | base64 -w 0)
export ENDPOINT=$(echo -n "[[VAR:ENDPOINT:https://s3.example.com:9000]]" | base64 -w 0)

vcluster snapshot create [[VAR:VCLUSTER_NAME:my-vcluster]] "s3://[[VAR:BUCKET:my-bucket]]/[[VAR:SNAPSHOT_KEY:my-snapshot-key]]?access-key-id=$ACCESS_KEY_ID&secret-access-key=$SECRET_ACCESS_KEY&url=$ENDPOINT&region=[[VAR:REGION:us-east-1]]&force-path-style=true"`}
  language="bash"
  title="Store a snapshot with an S3-compatible provider"
/>

</TabItem>
</Tabs>

##### S3 encryption support {#s3-encryption}

vCluster supports server-side encryption for S3 snapshots to meet security requirements. See the [CLI reference](/docs/vcluster/cli/vcluster_snapshot) for all available flags.

**SSE-S3 (AES256)**

<InterpolatedCodeBlock
  code={`vcluster snapshot create [[VAR:VCLUSTER_NAME:my-vcluster]] "s3://[[VAR:BUCKET:my-bucket]]/[[VAR:SNAPSHOT_KEY:my-snapshot-key]]" --server-side-encryption AES256`}
  language="bash"
/>

**SSE-KMS**

<InterpolatedCodeBlock
  code={`vcluster snapshot create [[VAR:VCLUSTER_NAME:my-vcluster]] "s3://[[VAR:BUCKET:my-bucket]]/[[VAR:SNAPSHOT_KEY:my-snapshot-key]]" --kms-key-id "[[VAR:KMS_KEY_ID:12345678-1234-1234-1234-123456789012]]"`}
  language="bash"
/>

**Example: Bucket policy requiring encryption**

```json title="Enforce SSE-S3 encryption"
{
  "Version": "2012-10-17",
  "Statement": [{
    "Sid": "DenyUnencryptedUploads",
    "Effect": "Deny",
    "Principal": "*",
    "Action": "s3:PutObject",
    "Resource": "arn:aws:s3:::my-bucket/*",
    "Condition": {
      "StringNotEquals": {
        "s3:x-amz-server-side-encryption": "AES256"
      }
    }
  }]
}
```

<!-- vale Google.Headings = NO -->
#### Store snapshots in Azure Blob Storage
<!-- vale Google.Headings = YES -->

Store snapshots in Azure Blob Storage using the standard Azure Blob HTTPS URL:

```
https://<account>.blob.core.windows.net/<container>/<blob-path>
```

vCluster supports three ways to authenticate:

<Tabs
  defaultValue="azure-cli"
  values={[
    {label: 'Azure CLI', value: 'azure-cli'},
    {label: 'SAS token', value: 'sas-token'},
    {label: 'Storage account key', value: 'storage-key'},
  ]}>

<TabItem value="azure-cli">

Log in with `az login` before running the snapshot command. You must also provide the subscription ID and resource group for the storage account as CLI flags or environment variables (`AZURE_SUBSCRIPTION_ID` and `AZURE_RESOURCE_GROUP`):

<InterpolatedCodeBlock
  code={`# Log in to Azure.
az login

# Create a snapshot and store it in Azure Blob Storage.
vcluster snapshot create [[VAR:VCLUSTER_NAME:my-vcluster]] "https://[[VAR:STORAGE_ACCOUNT:myaccount]].blob.core.windows.net/[[VAR:CONTAINER:my-container]]/[[VAR:BLOB_PATH:my-snapshot.tar.gz]]" \\
  --azure-subscription-id [[VAR:SUBSCRIPTION_ID:my-subscription-id]] \\
  --azure-resource-group [[VAR:RESOURCE_GROUP:my-resource-group]]`}
  language="bash"
  title="Create and store a snapshot in Azure Blob Storage using Azure CLI credentials"
/>

</TabItem>

<TabItem value="sas-token">

If the blob URL contains a SAS token, no Azure CLI login, subscription ID, or resource group is needed:

<InterpolatedCodeBlock
  code={`vcluster snapshot create [[VAR:VCLUSTER_NAME:my-vcluster]] "https://[[VAR:STORAGE_ACCOUNT:myaccount]].blob.core.windows.net/[[VAR:CONTAINER:my-container]]/[[VAR:BLOB_PATH:my-snapshot.tar.gz]]?sv=2022-11-02&ss=b&srt=co&sp=rwlacuptfx&se=2027-01-01T00:00:00Z&sig=YOUR_SAS_SIGNATURE"`}
  language="bash"
  title="Create and store a snapshot in Azure Blob Storage using a SAS token"
/>

</TabItem>

<TabItem value="storage-key">

Set the `AZURE_STORAGE_KEY` environment variable to the storage account access key. No subscription ID or resource group is needed:

<InterpolatedCodeBlock
  code={`export AZURE_STORAGE_KEY=my-storage-account-key

vcluster snapshot create [[VAR:VCLUSTER_NAME:my-vcluster]] "https://[[VAR:STORAGE_ACCOUNT:myaccount]].blob.core.windows.net/[[VAR:CONTAINER:my-container]]/[[VAR:BLOB_PATH:my-snapshot.tar.gz]]"`}
  language="bash"
  title="Create and store a snapshot in Azure Blob Storage using a storage account key"
/>

</TabItem>
</Tabs>

:::warning Security
When using Azure CLI credentials or a storage account key, the vCluster CLI generates a short-lived SAS token and stores it in a Kubernetes Secret. The snapshot controller reads this token to upload the snapshot to Azure Blob Storage. vCluster deletes the Secret once the snapshot completes.
:::

#### Store snapshots in containers

Use the `container` protocol to save snapshots as local files inside a vCluster container.
Run the following command to create a snapshot and store it in the specified path inside a container:

<InterpolatedCodeBlock
  code={`# Create a snapshot to local vCluster PVC (if using embedded storage).
vcluster snapshot create [[VAR:VCLUSTER_NAME:my-vcluster]] "container://[[VAR:SNAPSHOT_PATH:/data/my-snapshot.tar.gz]]"`}
  language="bash"
  title="Create snapshots inside a vCluster container"
/>

## Limitations

When taking snapshots and restoring tenant clusters, there are limitations:

**Sleeping tenant clusters**
- Snapshots require a running vCluster <GlossaryTerm term="control-plane">control plane</GlossaryTerm> and don't work with sleeping tenant clusters.

**Tenant clusters using an external database**
- vCluster snapshots export the tenant cluster's Kubernetes key/value data through kine, whether the external database is configured with `dataSource` or `connector`. This isn't a native database backup, and vCluster doesn't back up or roll back the external database itself, so take a native database backup before restoring. See [Restore limitations](./restore.mdx#limitations).

**Tenant clusters using deployed etcd**
- Snapshots aren't supported with deployed etcd (`controlPlane.backingStore.etcd.deploy`), even though `vcluster snapshot create` can still complete against it. Back up etcd with its own tooling instead. See [Back up and restore](../../configure/vcluster-yaml/control-plane/components/backing-store/etcd/deploy.mdx#back-up-and-restore).

**Distribution**
- Snapshots work only with <GlossaryTerm term="k8s">K8s</GlossaryTerm>.

**Cluster Certificates**
- vCluster doesn't include cluster certificates in snapshots.
